@@ -44,7 +44,6 @@ public class PostCommentServiceTest {
     @InjectMocks
     PostCommentService postCommentService;
 
-
     private User writer;
     private User writer2;
     private Post post;
@@ -59,10 +58,11 @@ public class PostCommentServiceTest {
         this.writer = User.of(
                 "testUserId",
                 "test@gmail.com",
-                "test1234!!",
+                "1234567890",
                 "test",
                 "경기도",
                 "성남시",
+                "",
                 "",
                 "instagramId"
         );
@@ -70,10 +70,11 @@ public class PostCommentServiceTest {
         this.writer2 = User.of(
                 "testUserId2",
                 "test123@gmail.com",
-                "test2345!!",
+                "1234567890",
                 "test2",
                 "경기도",
                 "성남시",
+                "",
                 "",
                 "instagramId2"
         );
@@ -128,23 +129,24 @@ public class PostCommentServiceTest {
         );
     }
 
-
     @Test
     @DisplayName("Success case for create parent comment")
     void successCreateParentComment() {
         try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
+            // given
             CommentCreateRequestDto commentRequestDto = new CommentCreateRequestDto("testContent1", null, "testPostId");
 
             given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
             given(this.postRepository.findById("testPostId")).willReturn(Optional.of(post));
 
-            given(PostComment.of("testContent1", this.writer, this.post, null)).willReturn(this.postComment);
+            mockedPostComment.when(() -> PostComment.of("testContent1", this.writer, this.post, null)).thenReturn(this.postComment);
 
             given(this.postCommentRepository.save(this.postComment)).willReturn(this.postComment);
-            //when
+
+            // when
             CommentResponseDto commentResponseDto = this.postCommentService.createComment("testUserId", commentRequestDto);
-            //then
+
+            // then
             assertThat(commentResponseDto).isNotNull();
             assertThat(commentResponseDto.getContent()).isEqualTo("testContent1");
         }
@@ -154,19 +156,21 @@ public class PostCommentServiceTest {
     @DisplayName("Success case for create child comment")
     void successCreateChildComment() {
         try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
+            // given
             CommentCreateRequestDto commentRequestDto = new CommentCreateRequestDto("testChildContent1", postComment.getId(), "testPostId");
 
             given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
             given(this.postRepository.findById("testPostId")).willReturn(Optional.of(post));
             given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
 
-            given(PostComment.of("testChildContent1", this.writer, this.post, postComment)).willReturn(this.childPostComment);
+            mockedPostComment.when(() -> PostComment.of("testChildContent1", this.writer, this.post, postComment)).thenReturn(this.childPostComment);
 
             given(this.postCommentRepository.save(this.childPostComment)).willReturn(this.childPostComment);
-            //when
+
+            // when
             CommentResponseDto commentResponseDto = this.postCommentService.createComment("testUserId", commentRequestDto);
-            //then
+
+            // then
             assertThat(commentResponseDto).isNotNull();
             assertThat(commentResponseDto.getContent()).isEqualTo("testChildContent1");
         }
@@ -175,110 +179,110 @@ public class PostCommentServiceTest {
     @Test
     @DisplayName("Success case for find parent comments")
     void successFindParentComments() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            given(this.postRepository.findById("testPostId")).willReturn(Optional.of(post));
+        // given
+        given(this.postRepository.findById("testPostId")).willReturn(Optional.of(post));
 
-            ArrayList<PostComment> parents = new ArrayList<>(Arrays.asList(postComment, postComment2));
-            ArrayList<PostComment> children1 = new ArrayList<>(Arrays.asList(childPostComment, childPostComment2));
-            ArrayList<PostComment> children2 = new ArrayList<>(List.of(childPostComment3));
+        ArrayList<PostComment> parents = new ArrayList<>(Arrays.asList(postComment, postComment2));
+        ArrayList<PostComment> children1 = new ArrayList<>(Arrays.asList(childPostComment, childPostComment2));
+        ArrayList<PostComment> children2 = new ArrayList<>(List.of(childPostComment3));
 
-            given(this.postCommentRepository.findByPostAndParentCommentIsNullAndIsDeletedFalseOrderByCreatedAt(post)).willReturn(parents);
-            given(this.postCommentRepository.findFirst3ByParentCommentIdAndIsDeletedFalseOrderByCreatedAt(postComment.getId())).willReturn(children1);
-            given(this.postCommentRepository.findFirst3ByParentCommentIdAndIsDeletedFalseOrderByCreatedAt(postComment2.getId())).willReturn(children2);
-            //when
-            List<CommentFindResponseDto> CommentFindResponseDto = this.postCommentService.findCommentsByPost("testPostId");
-            //then
-            assertThat(CommentFindResponseDto).isNotNull();
-            assertThat(CommentFindResponseDto.size()).isEqualTo(parents.size());
-            assertThat(CommentFindResponseDto.get(0).getChildren().size()).isEqualTo(children1.size());
-            assertThat(CommentFindResponseDto.get(1).getChildren().size()).isEqualTo(children2.size());
-            assertThat(CommentFindResponseDto.get(0).getChildren().get(0).getContent()).isEqualTo(childPostComment.getContent());
-        }
+        given(this.postCommentRepository.findByPostAndParentCommentIsNullAndIsDeletedFalseOrderByCreatedAt(post)).willReturn(parents);
+        given(this.postCommentRepository.findFirst3ByParentCommentIdAndIsDeletedFalseOrderByCreatedAt(postComment.getId())).willReturn(children1);
+        given(this.postCommentRepository.findFirst3ByParentCommentIdAndIsDeletedFalseOrderByCreatedAt(postComment2.getId())).willReturn(children2);
+
+        // when
+        List<CommentFindResponseDto> CommentFindResponseDto = this.postCommentService.findCommentsByPost("testPostId");
+
+        // then
+        assertThat(CommentFindResponseDto).isNotNull();
+        assertThat(CommentFindResponseDto.size()).isEqualTo(parents.size());
+        assertThat(CommentFindResponseDto.get(0).getChildren().size()).isEqualTo(children1.size());
+        assertThat(CommentFindResponseDto.get(1).getChildren().size()).isEqualTo(children2.size());
+        assertThat(CommentFindResponseDto.get(0).getChildren().get(0).getContent()).isEqualTo(childPostComment.getContent());
     }
 
     @Test
     @DisplayName("Success case for find child comments")
     void successFindChildComments() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
-            ArrayList<PostComment> children = new ArrayList<>(Arrays.asList(childPostComment, childPostComment2));
-            given(this.postCommentRepository.findAllByParentCommentAndIsDeletedFalseOrderByCreatedAt(postComment)).willReturn(children);
-            //when
-            List<ChildCommentResponseDto> CommentFindResponseDto = this.postCommentService.findAllChildCommentsByParent("testCommentId");
-            //then
-            assertThat(CommentFindResponseDto).isNotNull();
-            assertThat(CommentFindResponseDto.size()).isEqualTo(children.size());
-            assertThat(CommentFindResponseDto.get(0).getContent()).isEqualTo(childPostComment.getContent());
-        }
+        // given
+        ArrayList<PostComment> children = new ArrayList<>(Arrays.asList(childPostComment, childPostComment2));
+
+        given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
+        given(this.postCommentRepository.findAllByParentCommentAndIsDeletedFalseOrderByCreatedAt(postComment)).willReturn(children);
+
+        // when
+        List<ChildCommentResponseDto> CommentFindResponseDto = this.postCommentService.findAllChildCommentsByParent("testCommentId");
+
+        // then
+        assertThat(CommentFindResponseDto).isNotNull();
+        assertThat(CommentFindResponseDto.size()).isEqualTo(children.size());
+        assertThat(CommentFindResponseDto.get(0).getContent()).isEqualTo(childPostComment.getContent());
     }
 
     @Test
     @DisplayName("Success case for update comment")
     void successUpdateComment() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            CommentUpdateRequestDto commentUpdateRequestDto = new CommentUpdateRequestDto("updateContent", "testPostId");
+        // given
+        CommentUpdateRequestDto commentUpdateRequestDto = new CommentUpdateRequestDto("updateContent", "testPostId");
 
-            given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
-            given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
+        given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
+        given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
 
-            given(this.postCommentRepository.save(postComment)).willReturn(postComment);
-            //when
-            CommentResponseDto commentResponseDto = this.postCommentService.updateComment("testUserId", "testCommentId", commentUpdateRequestDto);
-            //then
-            assertThat(commentResponseDto).isNotNull();
-            assertThat(commentResponseDto.getContent()).isEqualTo("updateContent");
-        }
+        given(this.postCommentRepository.save(postComment)).willReturn(postComment);
+
+        // when
+        CommentResponseDto commentResponseDto = this.postCommentService.updateComment("testUserId", "testCommentId", commentUpdateRequestDto);
+
+        // then
+        assertThat(commentResponseDto).isNotNull();
+        assertThat(commentResponseDto.getContent()).isEqualTo("updateContent");
     }
 
     @Test
     @DisplayName("Update comment by other user")
-    void FailIUpdateComment() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            CommentUpdateRequestDto commentUpdateRequestDto = new CommentUpdateRequestDto("updateContent", "testPostId");
-            given(this.userRepository.findById("testUserId2")).willReturn(Optional.of(writer2));
-            given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
-            //when
-            assertThatThrownBy(() -> this.postCommentService.updateComment("testUserId2", "testCommentId", commentUpdateRequestDto))
-                    //then
-                    .isInstanceOf(UnauthorizedException.class)
-                    .hasMessage("접근 권한이 없습니다.");
-        }
+    void FailUpdateComment() {
+        // given
+        CommentUpdateRequestDto commentUpdateRequestDto = new CommentUpdateRequestDto("updateContent", "testPostId");
+
+        given(this.userRepository.findById("testUserId2")).willReturn(Optional.of(writer2));
+        given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
+
+        // when
+        assertThatThrownBy(() -> this.postCommentService.updateComment("testUserId2", "testCommentId", commentUpdateRequestDto))
+                // then
+                .isInstanceOf(UnauthorizedException.class)
+                .hasMessage("접근 권한이 없습니다.");
     }
 
     @Test
     @DisplayName("Success case for delete comment")
     void successDeleteComment() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
-            given(this.postCommentRepository.findById("testChildId1")).willReturn(Optional.of(childPostComment));
+        // given
+        given(this.userRepository.findById("testUserId")).willReturn(Optional.of(writer));
+        given(this.postCommentRepository.findById("testChildId1")).willReturn(Optional.of(childPostComment));
 
-            given(this.postCommentRepository.save(childPostComment)).willReturn(childPostComment);
-            //when
-            CommentResponseDto commentResponseDto = this.postCommentService.deleteComment("testChildId1", "testUserId");
-            //then
-            assertThat(commentResponseDto).isNotNull();
-            assertThat(commentResponseDto.getIsDeleted()).isEqualTo(true);
-        }
+        given(this.postCommentRepository.save(childPostComment)).willReturn(childPostComment);
+
+        // when
+        CommentResponseDto commentResponseDto = this.postCommentService.deleteComment("testChildId1", "testUserId");
+
+        // then
+        assertThat(commentResponseDto).isNotNull();
+        assertThat(commentResponseDto.getIsDeleted()).isEqualTo(true);
     }
 
     @Test
     @DisplayName("Delete comment by other user")
-    void FailIDeleteComment() {
-        try (MockedStatic<PostComment> mockedPostComment = mockStatic(PostComment.class)) {
-            //given
-            given(this.userRepository.findById("testUserId2")).willReturn(Optional.of(writer2));
-            given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
-            //when
-            assertThatThrownBy(() -> this.postCommentService.deleteComment("testCommentId", "testUserId2"))
-                    //then
-                    .isInstanceOf(UnauthorizedException.class)
-                    .hasMessage("접근 권한이 없습니다.");
-        }
+    void FailDeleteComment() {
+        // given
+        given(this.userRepository.findById("testUserId2")).willReturn(Optional.of(writer2));
+        given(this.postCommentRepository.findById("testCommentId")).willReturn(Optional.of(postComment));
+
+        // when
+        assertThatThrownBy(() -> this.postCommentService.deleteComment("testCommentId", "testUserId2"))
+                //then
+                .isInstanceOf(UnauthorizedException.class)
+                .hasMessage("접근 권한이 없습니다.");
     }
 
 }
